--- a/.cloudbees/workflows/pr-analysis.yml
+++ b/.cloudbees/workflows/pr-analysis.yml
@@ -13,11 +13,10 @@ jobs:
   analyze-pr:
     steps:
       - name: Analyze PR
-        id: analysis
         uses: swashbuck1r/claude-ci-tools@main
         with:
           anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           pr-number: ${{ cloudbees.scm.pull_request.number }}
-          repository: ${{ cloudbees.scm.repository_full_name }}
+          repository: ${{ cloudbees.scm.repository }}
           post-comment: "true"
