--- a/.cloudbees/workflows/pr-analysis.yml
+++ b/.cloudbees/workflows/pr-analysis.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          pr-number: ${{ cloudbees.scm.pull_request.number }}
+          pr-number: ${{ cloudbees.event.pull_request.number }}
           repository: ${{ cloudbees.scm.repository }}
           post-comment: "true"
